[package]
name = "skeleton"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Base skeleton example.
"""

[[bin]]
name = "skeleton"
path = "main.rs"
doctest = false

[dependencies]
capsule = { version = "0.1", path = "../../core" }
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
chashmap = "2.2"
once_cell = "1.2"
colored = "1.8"
rustls = "0.18.1"
webpki = "0.21.0"
webpki-roots = "0.19"